--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,18 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+    "name": "backend",
+    "version": "1.0.0",
+    "main": "dist/index.js",
+    "scripts": {
+        "build": "tsc",
+        "prestart": "yarn run build",
+        "start": "node .",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "license": "MIT",
+    "dependencies": {
+        "@types/express": "^4.17.14",
+        "@types/node": "^18.7.23",
+        "express": "^4.18.1",
+        "typescript": "^4.8.4"
+    }
 }
