--- a/scraper/package.json
+++ b/scraper/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.14",
     "@types/node": "^18.7.23",
     "axios": "^0.27.2",
+    "express": "^4.18.1",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "playwright": "^1.26.1"
