--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,11 +23,14 @@
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "embla-carousel-react": "^7.0.3",
+    "mapbox-gl": "^2.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.1.0",
+    "react-map-gl": "^7.0.19",
     "react-parallax-tilt": "^1.7.67",
     "react-particles": "^2.3.3",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-use-cart": "^1.13.0",
