--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "browser": "^0.2.6",
     "dayjs": "^1.11.5",
     "embla-carousel-react": "^7.0.3",
+    "ethers": "^5.7.1",
     "mapbox-gl": "^2.10.0",
     "https-browserify": "^1.0.0",
     "node-polyfill-webpack-plugin": "^2.0.1",
