--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:bullseye
 COPY . .
 RUN pip install --upgrade pip
+RUN apt update && apt upgrade -y && apt install unixodbc-dev odbcinst -y
 RUN pip install -r requirements.txt
-RUN apt update && apt install odbcinst -y
 RUN odbcinst -i -d -f pyodbc_wheel/linux/odbcinst.ini
 EXPOSE 5000
 CMD ["python", "main.py"]
