--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,6 @@
 FROM python:bullseye
 COPY requirements.txt .
+COPY pyodbc_wheel .
 RUN pip install --upgrade pip
 RUN apt update && apt upgrade -y && apt install unixodbc-dev odbcinst -y
 RUN pip install -r requirements.txt
